Realtime Chat Using Socket.io

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <div class="container mt-5">
         <center>
-            <h1 class="text-white">ChatKuy</h1>
+            <h1 class="text-white">Chat</h1>
         </center>
         <div class="card mt-3">
             <div class="card-body">
-                <h5><span id="totalUserOnline"></span> Orang Online</h5>
+                <h5><span id="totalUserOnline"></span> Online User</h5>
                 <div id="message-list" style="height: 40vh; overflow-y: auto;">
 
                 </div>
